# bengali-text-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py
src/analyzer/: bengali_utils.py
