[project]
name = "bengali-text-analyzer"
version = "0.1.0"
description = "A professional Bengali text analysis tool with NLP and AI-powered insights"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Md. Sakhaout Hossain", email = "sakhaoutbd@gmail.com" }
]
keywords = ["bengali", "nlp", "text-analysis", "streamlit", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/sakhaoutbd/bengali-text-analyzer"
Repository = "https://github.com/sakhaoutbd/bengali-text-analyzer"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"